Fixed undefined reference issues by adding player c file into MODEL_SRC in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ include(.cs211/cmake/CMakeLists.txt)
 
 set(MODEL_SRC
         # LIST ADDITIONAL MODEL .cxx FILES HERE:
+        src/player.cxx
         src/model.cxx)
 
 add_program(main
@@ -12,7 +13,6 @@ add_program(main
         src/controller.cxx
         src/player.cxx
         src/view.cxx
-        src/model.cxx
     ${MODEL_SRC})
 target_link_libraries(main ge211)
 
